--- a/css/single-product-main.css
+++ b/css/single-product-main.css
@@ -12,6 +12,7 @@
 .elixir {
   height: 46rem;
   width: auto;
+  opacity: 0.79;
 }
 
 .subheading {
